# Lab-Bookstore

./: Dockerfile  README.md  docker-compose.yml  env.dev  manage.py  pyproject.toml  pytest.ini
.github/workflows/: build.yml  heroku-deploy.yml
bookstore/: settings.py  urls.py  views.py
bookstore/.github/workflows/: build.yml
orderAPI/: admin.py  apps.py  factories.py  urls.py
orderAPI/migrations/: 0001_initial.py
orderAPI/models/: __init__.py  order.py
orderAPI/serializers/: __init__.py  order_serializer.py
orderAPI/viewsets/: order_viewset.py
productAPI/: admin.py  apps.py  factories.py  urls.py
productAPI/migrations/: 0001_initial.py
productAPI/models/: category.py  product.py
productAPI/serializers/: category_serializer.py  product_serializer.py
productAPI/viewsets/: __init__.py  product_viewset.py
tests/: test_order.py  test_order_serializer.py  test_order_viewset.py
